feat: :sparkles: Integração do formulário de login com o React Hook Form

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["clsx", "esnext", "Parens", "tailwindcss"]
+  "cSpell.words": ["clsx", "esnext", "hookform", "Parens", "tailwindcss"]
 }
