--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["clsx", "esnext", "hookform", "Parens", "tailwindcss"]
+  "cSpell.words": [
+    "clsx",
+    "esnext",
+    "hookform",
+    "nextjs",
+    "Parens",
+    "tailwindcss"
+  ]
 }
