--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 # Database
 DATABASE_URL="mongodb://<username>:<password>@localhost:27017/<database>"
+
+# NextAuth
+NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_SECRET="super-secret"
