--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,22 +4,25 @@
     "prettier",
     "plugin:react/recommended",
     "plugin:react-hooks/recommended",
-    "plugin:jsx-a11y/recommended"
+    "plugin:jsx-a11y/recommended",
+    "plugin:@typescript-eslint/recommended"
   ],
   "plugins": [
     "simple-import-sort",
     "react",
     "react-hooks",
     "jsx-a11y",
-    "prettier"
+    "prettier",
+    "@typescript-eslint"
   ],
+  "parser": "@typescript-eslint/parser",
   "rules": {
     "simple-import-sort/imports": "error",
     "react/react-in-jsx-scope": "off",
     "react/prop-types": "off",
     "jsx-a11y/heading-has-content": "off",
     "prettier/prettier": "error",
-    "no-unused-vars": [
+    "@typescript-eslint/no-unused-vars": [
       "warn",
       {
         "varsIgnorePattern": "^_",
