chore: :wrench: Alteração nas regras do eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,5 +29,13 @@
         "argsIgnorePattern": "^_"
       }
     ]
-  }
+  },
+  "overrides": [
+    {
+      "files": ["src/app/api/**/*.ts"],
+      "rules": {
+        "@typescript-eslint/no-explicit-any": "off"
+      }
+    }
+  ]
 }
