feat: :sparkles: Integração do formulário de registro de funcionário com o endpoint

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ DATABASE_URL="mongodb://<username>:<password>@localhost:27017/<database>"
 # NextAuth
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET="super-secret"
+
+# Next
+NEXT_PUBLIC_APP_API_URL="http://localhost:3000/api"
