--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cookies-next": "^4.2.1",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.2.10",
     "install": "^0.13.0",
+    "ky": "^1.3.0",
     "lucide-react": "^0.381.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
