--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "clsx": "^2.1.1",
     "cookies-next": "^4.2.1",
     "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "framer-motion": "^11.2.10",
     "install": "^0.13.0",
     "ky": "^1.3.0",
