--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cookies-next": "^4.2.1",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.2.10",
     "install": "^0.13.0",
     "ky": "^1.3.0",
